--- a/client/templates/home/index.html
+++ b/client/templates/home/index.html
@@ -2,14 +2,16 @@
     <h1>{{message}}</h1>
     {{#if currentUser}}
     <div class="content">
-        <div class="map-container">
+        <div class="map-container" id="map">
             {{> googleMap name="exampleMap" options=exampleMapOptions}}
         </div>
     </div>
 
-    <button type="button" id="current" class="btn btn-danger">Show Current Location</button>
+    <button type="button" id="current" class="btn btn-danger">Show direction</button>
     <button type="button" id="all" class="btn btn-danger">show all users</button>
     <button type="button" id="track" class="btn btn-danger">Track me</button>
+    <button type="button" id="stop" class="btn btn-danger">Stop Tracking</button>
+    <button type="button" id="test" class="btn btn-danger">Test</button>
     {{else}}
         <h2>please login to the system</h2>
     {{/if}}
