finalized the tracking system

--- a/client/templates/home/index.html
+++ b/client/templates/home/index.html
@@ -8,12 +8,14 @@
     </div>
 
     <button type="button" id="current" class="btn btn-danger">Show direction</button>
-    <button type="button" id="all" class="btn btn-danger">show all users</button>
+    <button type="button" id="all" class="btn btn-danger">show all Directions</button>
     <button type="button" id="track" class="btn btn-danger">Track me</button>
     <button type="button" id="stop" class="btn btn-danger">Stop Tracking</button>
     <button type="button" id="test" class="btn btn-danger">Test</button>
+    <button type="button" id="t" class="btn btn-danger">testing</button>
     {{else}}
         <h2>please login to the system</h2>
     {{/if}}
+    
     <!--<button type="button" class="btn btn-default">Show Current Location</button>-->
 </template>
